Update bfs_bench.sh